--- a/assets/sass/layout/_single-product.scss
+++ b/assets/sass/layout/_single-product.scss
@@ -109,7 +109,8 @@
         }
       }
     }
-.product_flex {
+
+.product__flex {
    display: flex;
    justify-content: space-between;
    align-item: center;
