--- a/_includes/mini_header.html
+++ b/_includes/mini_header.html
@@ -1,5 +1,5 @@
-<header class="header">
-  <div class="header__container">
+
+  <header class="header__container">
     <div class="header__logo">{{ site.title }}</div>
 
     <!-- Burger Button -->
@@ -18,11 +18,4 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-  </div>
-
-  <div class="header__hero">
-    <h1>Unleash Your Street Style</h1>
-    <p>Premium Apparel for Everyday Rebels</p>
-    <a href="/product" class="header__btn">Shop Now</a>
-  </div>
-</header>
+  </header>
