--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: page.lang | default: 'en' }}">
+<html lang="{{ site.lang | default: page.lang | default: 'id | ID' }}">
 
   {% include head.html %}
 
@@ -11,6 +11,18 @@
     </main>
 
   {% include footer.html %}
+  {% include showGlobal.html %}
+  {% include javascript.html %}
+<!--<script>
+  setInterval(() => {
+    document.querySelectorAll('link[rel="stylesheet"]').forEach(link => {
+      if (link.href.includes('.css')) {
+        const newHref = link.href.split('?')[0] + '?v=' + new Date().getTime();
+        link.href = newHref;
+      }
+    });
+  }, 3000);
+</script>-->
   </body>
 
 </html>
