--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -1,7 +1,9 @@
 html {
   box-sizing: border-box;
 }
-
+body {
+	background: #f7f8fa;
+	}
 *, ::before, ::after {
   box-sizing: inherit;
   margin: 0;
