--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -3,5 +3,10 @@
 .home {
   @include flex-center;
   min-height: 100vh;
-  background: #f5f5f5;
+}
+main.main {
+    max-width: 1200px;
+    width: 100vw;
+    margin: auto;
+	background: #f5f5f5;
 }
