--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -20,10 +20,11 @@ hamburger.addEventListener('click', () => {
 });
 
 // Global Alert
-function showAlert(message = '', duration = 3000) {
+function showAlert(message, type = 'success', duration = 3000) {
   const alertBox = document.getElementById('global-alert');
   const alertMessage = document.getElementById('global-alert-message');
   alertMessage.innerText = message;
+  alertBox.className = `global-alert show--${type}`;
   alertBox.classList.add('show');
   setTimeout(() => {
     alertBox.classList.remove('show');
