--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -20,7 +20,7 @@ hamburger.addEventListener('click', () => {
 });
 
 // Global Alert
-function showAlert(message, type = 'success', duration = 3000) {
+function showAlert(message, type = 'default', duration = 3000) {
   const alertBox = document.getElementById('global-alert');
   const alertMessage = document.getElementById('global-alert-message');
   alertMessage.innerText = message;
