--- a/_includes/product.html
+++ b/_includes/product.html
@@ -3,4 +3,4 @@
     <!-- Product cards akan muncul di sini -->
   </div>
 </section>
-<script src='/assets/js/post_products.js'></script>
+<script src="{{ '/assets/js/post_products.js' | relative_url }}"></script>
