--- a/_includes/firebase_sdk.html
+++ b/_includes/firebase_sdk.html
@@ -8,6 +8,7 @@
     authDomain: "{{site.authDomain}}",
     projectId: "{{site.projectId}}",
     storageBucket: "{{site.storageBucket}}",
+	databaseURL: "{{site.databaseURL}}",
     senderId: "{{site.senderId}}",
     appId: "{{site.appId}}",
   };
